--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</div>
 				</div><!--end content_header-->
 			</div>
-			<div class="cycle">
+			<div class="cycle mb_hidden tb_hidden">
 				<img src="./img/Oval.png" alt="">
 			</div>
 		</section>
