--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/_main.min.css">
+	<link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/owl.theme.default.css">
+	<link rel="stylesheet" href="css/cocoen.min.css">
 </head>
 <html>
 	<body>
@@ -55,6 +58,251 @@
 				<img src="./img/Oval.png" alt="">
 			</div>
 		</section>
+		<section class="what_is_it">
+			<div class="container">
+				<div class="header_what_is_it">
+					<h2>Что такое Песочно?</h2>
+					<p>Мы рисуем с детьми в торговых центрах, нас приглашают в детские сады и школы, на фестивали<br/> и дни рождения, что бы мы делали незабываемый праздник для детей!</p>
+				</div>
+				<div class="owl-carousel owl-theme">
+				  <div class="item">
+				  		<div class="wrap_items">
+				  			<div class="left">
+				  					<h3>Уникальное творческое увлечение для <br class="tb_hidden"/>детей</h3>
+				  					<p>Выезд на любой десткий праздник. Организация <br/>увлекательного процесса рисования<br class="tb_desktop tb_mobile"/> картин цветным песком.</p>
+				  			</div>
+				  			<div class="right">
+				  				<div class="cocoen">
+								    <img src="./img/before.png" alt="">
+								    <img src="./img/after.png" alt="">
+								</div>
+				  			</div>
+				  		</div>
+				  </div>
+				   <div class="item">
+				  		<div class="wrap_items">
+				  			<div class="left">
+				  					<h3>Уникальное творческое увлечение для <br class="tb_hidden"/>детей</h3>
+				  					<p>Выезд на любой десткий праздник. Организация <br/>увлекательного процесса рисования картин цветным песком.</p>
+				  			</div>
+				  			<div class="right">
+				  				<img src="./img/1.png" alt="">
+				  			</div>
+				  		</div>
+				  </div>
+				   <div class="item">
+				  		<div class="wrap_items">
+				  			<div class="left">
+				  					<h3>Удобное и легкое выездное <br class="tb_hidden"/>оборудование</h3>
+				  					<p>Стол, высотой 40см, шириной 60см, без острых<br/> углов. На рабочей зоне расположены контейнеры с <br/>цветным песком (от 10 до 12шт). Вместимость за <br/>один стол около 6-8 детей.</p>
+				  			</div>
+				  			<div class="right">
+				  				<img src="./img/2.png" alt="">
+				  			</div>
+				  		</div>
+				  </div>
+				</div>
+				<div class="counter"></div>
+			</div><!-- end container-->
+		</section>
+		<section class="advantages">
+			<div class="container">
+				<div class="header_advantages">
+					<h2>Преимущества нашей франшизы</h2>
+					<div class="wrap_items">
+						<div class="item">
+							<img src="./img/advantage_1.png" alt="">
+							<h3>Стартовый пакет товара</h3>
+				  			<p>трафареты и песок по розничной цене на <br/> 150 000 руб.</p>
+						</div>
+						<div class="item">
+							<img src="./img/advantage_2.png" alt="">
+							<h3>Нет прямых конкурентов</h3>
+							<p>мы единственная выездная песочница в <br/>вашем городе</p>
+						</div>
+						<div class="item">
+							<img src="./img/advantage_3.png" alt="">
+							<h3>Минимум рисков</h3>
+							<p>отработал - заработал, нет больших <br/> ежемесячных платежей по аренде</p>
+						</div>
+					</div>
+					<button>Отправить заявку</button>
+				</div>
+			</div>
+		</section>
+		<section class="business_plan">
+			<div class="container">
+				<div class="wrap_business_plan">
+					<div class="contant">
+						<div class="show_tb_ds_1000">
+							<h2>Получить подробный <br/> бизнес-план</h2>
+							<p>Оставьте заявку на франшизу и мы пришлем вам<br class="ds_hidden"/>подробный бизнес-план c <br class="tb_hidden" /> расчетом прибыли и <br class="ds_hidden"/>презентацию франшизы с ценами</p>
+							<form>
+								<input type="text" placeholder="Ваш телефон">
+								<input type="text" placeholder="Номер телефона">
+								<input type="text" placeholder="E-mail">
+								<button type="submit">Отправить заявку</button>
+							</form>
+						</div>
+						<div class="show_mb">
+							<div class="left">
+								<div>
+									<img src="./img/girls_mobile.png" alt="">
+								</div>
+							</div>
+							<div class="right">
+								<h2>Получить подробный <br/> бизнес-план</h2>
+								<p>Оставьте заявку на франшизу и мы пришлем вам<br class="ds_hidden"/>подробный бизнес-план c <br class="tb_hidden" /> расчетом прибыли и <br class="ds_hidden"/>презентацию франшизы с ценами</p>
+								<form>
+									<input type="text" placeholder="Ваш телефон">
+									<input type="text" placeholder="Номер телефона">
+									<input type="text" placeholder="E-mail">
+									<button type="submit">Отправить заявку</button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="what_includes">
+			<div class="container">
+				<h2>Что входит в франшизу?</h2>
+				<div class="wrap_items">
+					<div class="item">
+						<img src="./img/colored-sand.png" alt="">
+						<h3>Стартовый пакет товара</h3>
+						<p>трафареты и песок по розничной цене на <br/> 200 руб.</p>
+					</div>
+					<div class="item">
+						<img src="./img/boxes.png" alt="">
+						<h3>Готовое оборудование</h3>
+						<p>2 стола, рекламные банеры, контейнеры, <br/> футболки для сотрудников и тгд</p>
+					</div>
+					<div class="item">
+						<img src="./img/instructure.png" alt="">
+						<h3>Инструкции</h3>
+						<p>подробные инструкции по запуску бизенса с <br/> описанием всех процессов</p>
+					</div>
+					<div class="item">
+						<img src="./img/brandbook.png" alt="">
+						<h3>Брендбук</h3>
+						<p>название, логотип, оборудование, все <br/> необходимые скрипты</p>
+					</div>
+					<div class="item">
+						<img src="./img/price.png" alt="">
+						<h3>Товар по выгодным ценам</h3>
+						<p>возможность заказать товар напрямую у <br/> производителя</p>
+					</div>
+					<div class="item">
+						<img src="./img/support.png" alt="">
+						<h3>Полная поддержка</h3>
+						<p>в первые два месяца поддержки и <br/> консультации по запуску бизнеса</p>
+					</div>
+				</div>
+				<button>Отправить заявку</button>
+			</div>
+		</section>
+		<section class="about">
+			<div class="container">
+				<div class="wrap_items">
+					<div class="left">
+						<img src="./img/about.png" alt="">
+						<h3>Артем и Ирина Мишнев</h3>
+						<p>Основатели студии &laquo;Песочно&raquo;</p>
+					</div>
+					<div class="right">
+						<h2>О нас</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aliquid aut hic sed, dignissimos totam ullam fugit, quos velit nobis impedit, assumenda eum harum quae porro. Consequuntur odit tempore, inventore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, consequuntur iusto hic. Doloribus numquam distinctio odit, fugiat, atque quas repudiandae sit similique dolore impedit facilis officiis animi non ducimus labore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias fuga accusamus dolore porro beatae voluptas dicta, consectetur impedit culpa itaque laborum harum exercitationem tempora, sint enim a sed eligendi doloribus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, expedita inventore a molestiae voluptas non iste rem. Quae soluta explicabo hic consequatur, possimus ullam. Consequuntur iure aperiam natus mollitia maiores!</p>
+						<button>Отправить заявку</button>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="open">
+			<div class="container">
+				<h2>Открывайте свой бизнес и <br/> получите прибыль</h2>
+				<div class="menu">
+					<ul>
+						<li>
+							<p>1 этап</p>
+							<p>Бизнес план и <br/> знакомство</p>
+						</li>
+						<li>
+							<p>2 этап</p>
+							<p>Подписание <br/> договора</p>
+						</li>
+						<li>
+							<p>3 этап</p>
+							<p>Получение <br/> франшизы</p>
+						</li>
+						<li>
+							<p>4 этап</p>
+							<p>Обучение <br/> и подготовка</p>
+						</li>
+						<li>
+							<p>5 этап</p>
+							<p>Успешный <br/> запуск</p>
+						</li>
+					</ul>
+				</div>
+				<div class="contant">
+					<div class="wrap_items">
+						<div class="item">
+							<div class="left first">
+								<h4>Бизнес план и знакомство</h4>
+								<p>Отправляете нам заявку и мы высылаем вам презентацию и подробную финансовую модель бизнеса для ознакомления. Мы связываемся с вами и консультируем по всем деталям проекта, отвечаем на все возникшие вопросы.</p>
+							</div>
+							<div class="right">
+								<img src="./img/open1.png" alt="">
+							</div>
+						</div>
+						<div class="item">
+							<div class="left">
+								<h4>Подписание договора</h4>
+								<p>Оформление всех официальных документов, подписание договоров. Получение необходимых материалов.</p>
+							</div>
+							<div class="right">
+								<img src="./img/open2.png" alt="">
+							</div>
+						</div>
+						<div class="item">
+							<div class="left">
+								<h4>Получение франшизы</h4>
+								<p>Оплата паушального взноса. Получение на руки всех необходимых инструкций и стартового пакета товара для начала работы.</p>
+							</div>
+							<div class="right">
+								<img src="./img/open3.png" alt="">
+							</div>
+						</div>
+						<div class="item">
+							<div class="left">
+								<h4>Обучение и подготовка</h4>
+								<p>Оплата паушального взноса. Получение на руки всех необходимых инструкций и стартового пакета товара для начала работы.</p>
+							</div>
+							<div class="right">
+								<img src="./img/open4.png" alt="">
+							</div>
+						</div>
+						<div class="item">
+							<div class="left">
+								<h4>Успешный запуск</h4>
+								<p>Оплата паушального взноса. Получение на руки всех необходимых инструкций и стартового пакета товара для начала работы.</p>
+							</div>
+							<div class="right">
+								<img src="./img/open5.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+				<button>Отправить заявку</button>
+			</div>
+		</section>
 	</body>
+	<script src="libs/jquery-1.11.2.min.js"></script>
+	<script src="js/owl.carousel.js"></script>
+	<script src="js/cocoen.min.js"></script>
+	<script src="js/cocoen-jquery.min.js"></script>
+	<script src="js/common.min.js"></script>
 </html>
 
