--- a/index.html
+++ b/index.html
@@ -248,55 +248,65 @@
 				</div>
 				<div class="contant">
 					<div class="wrap_items">
-						<div class="item">
-							<div class="left first">
-								<h4>Бизнес план и знакомство</h4>
-								<p>Отправляете нам заявку и мы высылаем вам презентацию и подробную финансовую модель бизнеса для ознакомления. Мы связываемся с вами и консультируем по всем деталям проекта, отвечаем на все возникшие вопросы.</p>
-							</div>
-							<div class="right">
-								<img src="./img/open1.png" alt="">
-							</div>
-						</div>
-						<div class="item">
-							<div class="left">
-								<h4>Подписание договора</h4>
-								<p>Оформление всех официальных документов, подписание договоров. Получение необходимых материалов.</p>
-							</div>
-							<div class="right">
-								<img src="./img/open2.png" alt="">
+						<div class="wrap_item">
+							<div class="item">
+								<div class="left first">
+									<h4>Бизнес план и знакомство</h4>
+									<p>Отправляете нам заявку и мы высылаем вам презентацию и подробную финансовую модель бизнеса для ознакомления. Мы связываемся с вами и консультируем по всем деталям проекта, отвечаем на все возникшие вопросы.</p>
+								</div>
+								<div class="right">
+									<img src="./img/open1.png" alt="">
+								</div>
 							</div>
 						</div>
-						<div class="item">
-							<div class="left">
-								<h4>Получение франшизы</h4>
-								<p>Оплата паушального взноса. Получение на руки всех необходимых инструкций и стартового пакета товара для начала работы.</p>
-							</div>
-							<div class="right">
-								<img src="./img/open3.png" alt="">
-							</div>
-						</div>
-						<div class="item">
-							<div class="left">
-								<h4>Обучение и подготовка</h4>
-								<p>Оплата паушального взноса. Получение на руки всех необходимых инструкций и стартового пакета товара для начала работы.</p>
-							</div>
-							<div class="right">
-								<img src="./img/open4.png" alt="">
+						<div class="wrap_item">
+							<div class="item">
+								<div class="left">
+									<h4>Подписание договора</h4>
+									<p>Оформление всех официальных документов, подписание договоров. Получение необходимых материалов.</p>
+								</div>
+								<div class="right">
+									<img src="./img/open2.png" alt="">
+								</div>
 							</div>
 						</div>
-						<div class="item">
-							<div class="left">
-								<h4>Успешный запуск</h4>
-								<p>Оплата паушального взноса. Получение на руки всех необходимых инструкций и стартового пакета товара для начала работы.</p>
+						<div class="wrap_item">
+							<div class="item">
+								<div class="left">
+									<h4>Получение франшизы</h4>
+									<p>Оплата паушального взноса. Получение на руки всех необходимых инструкций и стартового пакета товара для начала работы.</p>
+								</div>
+								<div class="right">
+									<img src="./img/open3.png" alt="">
+								</div>
 							</div>
-							<div class="right">
-								<img src="./img/open5.png" alt="">
+						</div>
+						<div class="wrap_item">
+							<div class="item">
+								<div class="left">
+									<h4>Обучение и подготовка</h4>
+									<p>Оплата паушального взноса. Получение на руки всех необходимых инструкций и стартового пакета товара для начала работы.</p>
+								</div>
+								<div class="right">
+									<img src="./img/open4.png" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="wrap_item">
+							<div class="item">
+								<div class="left">
+									<h4>Успешный запуск</h4>
+									<p>Оплата паушального взноса. Получение на руки всех необходимых инструкций и стартового пакета товара для начала работы.</p>
+								</div>
+								<div class="right">
+									<img src="./img/open5.png" alt="">
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<button>Отправить заявку</button>
 			</div>
+			<button>Отправить заявку</button>
 		</section>
 	</body>
 	<script src="libs/jquery-1.11.2.min.js"></script>
