--- a/index.html
+++ b/index.html
@@ -308,6 +308,78 @@
 			</div>
 			<button>Отправить заявку</button>
 		</section>
+		<section class="price">
+			<div class="container">
+				<h2>Стоимость и расчет прибыли</h2>
+				<div class="wrap_items">
+					<div class="item">
+						<div class="left">
+							<h4>Стоимость франшизы:</h4>
+						</div>
+						<div class="right">
+							<p><span><s>200 000 ₽</s><em>180 000 ₽</em></span><span>цена франшизы при покупке до 31.05</span></p>
+						</div>
+					</div>
+					<div class="item">
+						<div class="left">
+							<h4>Прибыль:</h4>
+						</div>
+						<div class="right">
+							<p>Стоимость посещения музея составляет от 120 ₽* При выезде музея в школу его за день посещают около 150 чел. (5 классов по 30 чел.). Оборот в месяц: около 396 000 ₽* (за 22 рабочих дня).</p>
+						</div>
+					</div>
+					<div class="item">
+						<div class="left">
+							<h4>
+								Ежемесячные затраты:
+							</h4>
+						</div>
+						<div class="right">
+							<p>Зарплата (водитель-грузчик и консультант-ведущий) 40 000 ₽ + печатная рекламная продукция 5 000 ₽ + транспортные расходы 10 000 ₽ + прочие расходы 10 000 ₽ + роялти 11 880 ₽ (3% от оборота) + налоги 23 760 ₽ = 100 640 ₽*</p>
+						</div>
+					</div>
+					<div class="item">
+						<div class="left">
+							<h4>
+								Чистая прибыль:
+							</h4>
+						</div>
+						<div class="right">
+							<p><span>396 000 ₽ - 100 640 ₽ = <em>295 360 ₽&#42; в мес.</em></span></p>
+						</div>
+					</div>
+				</div>
+				<button>Отправить заявку</button>
+				<p class="info">* Расчеты составлены по данным управляющей компании. Успешность бизнеса зависит от вас.</p>
+			</div>
+		</section>
+		<section class="faq">
+			<div class="container">
+				<h2>У вас отсались вопросы?</h2>
+				<ul>
+					<li>
+						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+					</li>
+					<li>
+						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+					</li>
+					<li>
+						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+					</li>
+					<li>
+						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+					</li>
+					<li>
+						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+					</li>
+				</ul>
+			</div>	
+		</section>
 	</body>
 	<script src="libs/jquery-1.11.2.min.js"></script>
 	<script src="js/owl.carousel.js"></script>
