--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<h2>Что такое Песочно?</h2>
 					<p>Мы рисуем с детьми в торговых центрах, нас приглашают в детские сады и школы, на фестивали<br/> и дни рождения, что бы мы делали незабываемый праздник для детей!</p>
 				</div>
-				<div class="owl-carousel owl-theme">
+				<div class="owl-carousel owl-one owl-theme">
 				  <div class="item">
 				  		<div class="wrap_items">
 				  			<div class="left">
@@ -306,7 +306,11 @@
 					</div>
 				</div>
 			</div>
-			<button>Отправить заявку</button>
+		</section>
+		<section>
+			<div class="container">
+				<button style="margin-bottom: 80px">Отправить заявку</button>
+			</div>
 		</section>
 		<section class="price">
 			<div class="container">
@@ -356,30 +360,90 @@
 		<section class="faq">
 			<div class="container">
 				<h2>У вас отсались вопросы?</h2>
-				<ul>
-					<li>
-						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+				<div class="wrap_items">
+					<div class="item">
+						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
-					</li>
-					<li>
-						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+					</div>
+					<div class="item">
+						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
-					</li>
-					<li>
-						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+					</div>
+					<div class="item">
+						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
-					</li>
-					<li>
-						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+					</div>
+					<div class="item">
+						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
-					</li>
-					<li>
-						Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?
+					</div>
+					<div class="item">
+						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
-					</li>
-				</ul>
+					</div>
+				</div>
+				<button>Отправить заявку</button>
+				<p>Не нашли ответ на свой вопрос? Закижите обратный звонок и мы<br/> с радостью ответим на все вопросы.</p>
 			</div>	
 		</section>
+		<section class="foto">
+			<div class="owl-carousel owl-two owl-theme" id="owl-two">
+			    <div class="item"><img src="./img/foto2.png" alt=""></div>
+			    <div class="item"><img src="./img/foto3.png" alt=""></div>
+			    <div class="item"><img src="./img/foto4.png" alt=""></div>
+			    <div class="item"><img src="./img/foto1.png" alt=""></div>
+			</div>
+		</section>
+		<section class="get_plan">
+			<div class="container">
+				<div class="wrap_business_plan">
+					<div class="contant">
+						<div class="show_tb_ds_1000">
+							<h2>Получить подробный <br/> бизнес-план</h2>
+							<p>Оставьте заявку на франшизу и мы пришлем вам<br class="ds_hidden"/>подробный бизнес-план c <br class="tb_hidden" /> расчетом прибыли и <br class="ds_hidden"/>презентацию франшизы с ценами</p>
+							<form>
+								<input type="text" placeholder="Ваш телефон">
+								<input type="text" placeholder="Номер телефона">
+								<input type="text" placeholder="E-mail">
+								<button type="submit">Отправить заявку</button>
+							</form>
+						</div>
+						<div class="show_mb">
+							<div class="left">
+								<div>
+									<img src="./img/get_plan_bg.png" alt="">
+								</div>
+							</div>
+							<div class="right">
+								<h2>Получить подробный <br/> бизнес-план</h2>
+								<p>Оставьте заявку на франшизу и мы пришлем вам<br class="ds_hidden"/>подробный бизнес-план c <br class="tb_hidden" /> расчетом прибыли и <br class="ds_hidden"/>презентацию франшизы с ценами</p>
+								<form>
+									<input type="text" placeholder="Ваш телефон">
+									<input type="text" placeholder="Номер телефона">
+									<input type="text" placeholder="E-mail">
+									<button type="submit">Отправить заявку</button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<img src="./img/oval_get.png" class="oval" alt="">
+		</section>
+		<div class="footer">
+			<div class="container">
+				<div class="wrap_footer">
+					<div class="left">
+						<img src="./img/logo-pesochno-w.png" alt="">
+						<p>Франшиза детской <br/>выездной песочницы</p>
+					</div>
+					<div class="right">
+						<p>Перезвоните мне</p>
+						<div><a href="#"><img src="./img/phone.png" alt=""></a></div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="libs/jquery-1.11.2.min.js"></script>
 	<script src="js/owl.carousel.js"></script>
