--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="content_header">
 					<div class="left_content_header">
 						<div class="top_left_content_header">
-							<h1>Откройте детскую <br class="tb_hidden ds_hidden"/>песочницу в <br class="mb_hidden" /> своем городе и <br class="tb_hidden ds_hidden"/> получайте доход<br class="mb_hidden"/> до <span>300 000 ₽</span></h1>
+							<h1>Откройте детский творческий проект &laquo;ПеСОЧНО&raquo;<br class="tb_hidden ds_hidden"/> в <br class="mb_hidden" /> своем городе и <br class="tb_hidden ds_hidden"/> получайте доход<br class="mb_hidden"/> от <span>150 000 ₽ в месяц</span></h1>
 							<p>Получите наш успешный опыт и <br class="ds_hidden tb_hidden"/> отлаженные бизнес-процессы</p>
 						</div>
 						<div class="bottom_left_content_header">
@@ -61,8 +61,10 @@
 		<section class="what_is_it">
 			<div class="container">
 				<div class="header_what_is_it">
-					<h2>Что такое Песочно?</h2>
-					<p>Мы рисуем с детьми в торговых центрах, нас приглашают в детские сады и школы, на фестивали<br/> и дни рождения, что бы мы делали незабываемый праздник для детей!</p>
+					<h2>Что такое  &laquo;ПеСОЧНО&raquo;?</h2>
+					<p>&laquo;ПеСОЧНО&raquo; - это детская творческая интерактивная площадка для раскраски картинок цветным песком по трафаретам.
+                    <br/> Наши площадки представлены в торговых центрах, детских садах и школах, на городских фестивалях и парках, на частных праздниках.
+                </p>
 				</div>
 				<div class="owl-carousel owl-one owl-theme">
 				  <div class="item">
@@ -76,6 +78,7 @@
 								    <img src="./img/before.png" alt="">
 								    <img src="./img/after.png" alt="">
 								</div>
+								 <p>Трафарет – это трехслойное изделие, состоящее из картона, клеевого слоя и бумаги, разных форматов (А6, А5, А4, магниты, часы), на котором лазером вырезаны образы популярных детских персонажей, героев мультфильмов, животных и т.д.1</p>
 				  			</div>
 				  		</div>
 				  </div>
@@ -86,7 +89,8 @@
 				  					<p>Выезд на любой десткий праздник. Организация <br/>увлекательного процесса рисования картин цветным песком.</p>
 				  			</div>
 				  			<div class="right">
-				  				<img src="./img/1.png" alt="">
+                                  <img src="./img/1.png" alt="">
+                                  <p>Наш проект увлекателен и очень интересен детям и взрослым!</p>
 				  			</div>
 				  		</div>
 				  </div>
@@ -98,6 +102,7 @@
 				  			</div>
 				  			<div class="right">
 				  				<img src="./img/2.png" alt="">
+				  				<p>Цветной песок – это кварцевый песок, мелкой фракции, специально окрашенный для детского творчества. Материал не красит руки и одежду, не вызывает аллергию.</p>
 				  			</div>
 				  		</div>
 				  </div>
@@ -105,7 +110,7 @@
 				<div class="counter"></div>
 			</div><!-- end container-->
 		</section>
-		<section class="advantages">
+<!-- 		<section class="advantages">
 			<div class="container">
 				<div class="header_advantages">
 					<h2>Преимущества нашей франшизы</h2>
@@ -129,10 +134,11 @@
 					<button class="send">Отправить заявку</button>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<section class="business_plan">
 			<div class="container">
 				<div class="wrap_business_plan">
+				<h2>Получить более подробную информацию</h2>
 					<div class="contant">
 						<div class="left">
 							<div>
@@ -141,7 +147,7 @@
 						</div>
 						<div class="right">
 							<h2>Получить подробный <br/> бизнес-план</h2>
-								<p>Оставьте заявку на франшизу и мы пришлем вам<br class="ds_hidden"/> подробный бизнес-план c <br class="tb_hidden" /> расчетом прибыли и <br class="ds_hidden"/>презентацию франшизы с ценами</p>
+								<p>Оставьте заявку и с вами свяжеться менеджер<br class="ds_hidden"/> для предоставлении более <br class="tb_hidden" /> подробдной <br class="ds_hidden"/>информации</p>
 								<form action="get_plan.php" id="get_plan_one">
 									<input type="text" placeholder="Ваше имя" name="name" required>
 									<input type="text" placeholder="Номер телефона" name="phone" class="phone" required>
@@ -155,37 +161,37 @@
 		</section>
 		<section class="what_includes">
 			<div class="container">
-				<h2>Что входит в франшизу?</h2>
+				<h2>Что входит во франшизу?</h2>
 				<div class="wrap_items">
 					<div class="item">
 						<img src="./img/colored-sand.png" alt="">
 						<h3>Стартовый пакет товара</h3>
-						<p>трафареты и песок по розничной цене на <br/> 200 руб.</p>
+						<p>1500 трафаретов, 120кг цветного песка</p>
 					</div>
 					<div class="item">
 						<img src="./img/boxes.png" alt="">
 						<h3>Готовое оборудование</h3>
-						<p>2 стола, рекламные банеры, контейнеры, <br/> футболки для сотрудников и тгд</p>
+						<p> 2 стола, 4 рекламных баннера на столы,<br/> 24 контейнера с крышками, 2 формы для сотрудников.</p>
 					</div>
 					<div class="item">
 						<img src="./img/instructure.png" alt="">
 						<h3>Инструкции</h3>
-						<p>подробные инструкции по запуску бизенса с <br/> описанием всех процессов</p>
+						<p>Полная инструкция по запуску бизнеса, описание <br/>всех процессов, скрипты продаж и фин.план</p>
 					</div>
 					<div class="item">
 						<img src="./img/brandbook.png" alt="">
 						<h3>Брендбук</h3>
-						<p>название, логотип, оборудование, все <br/> необходимые скрипты</p>
+						<p>логотип, макеты презентации и листовок, <br/>визиток, бейджиков для сотрудников</p>
 					</div>
 					<div class="item">
 						<img src="./img/price.png" alt="">
 						<h3>Товар по выгодным ценам</h3>
-						<p>возможность заказать товар напрямую у <br/> производителя</p>
+						<p>заказ товара напрямую у <br/>производителя</p>
 					</div>
 					<div class="item">
 						<img src="./img/support.png" alt="">
 						<h3>Полная поддержка</h3>
-						<p>в первые два месяца поддержки и <br/> консультации по запуску бизнеса</p>
+						<p>сопровождение и консультации по запуску <br/>проекта</p>
 					</div>
 				</div>
 				<button class="send">Отправить заявку</button>
@@ -196,12 +202,17 @@
 				<div class="wrap_items">
 					<div class="left">
 						<img src="./img/about.png" alt="">
-						<h3>Артем и Ирина Мишнев</h3>
+						<h3>Артем и Ирина Мишневы</h3>
 						<p>Основатели студии &laquo;Песочно&raquo;</p>
 					</div>
 					<div class="right">
 						<h2>О нас</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aliquid aut hic sed, dignissimos totam ullam fugit, quos velit nobis impedit, assumenda eum harum quae porro. Consequuntur odit tempore, inventore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, consequuntur iusto hic. Doloribus numquam distinctio odit, fugiat, atque quas repudiandae sit similique dolore impedit facilis officiis animi non ducimus labore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias fuga accusamus dolore porro beatae voluptas dicta, consectetur impedit culpa itaque laborum harum exercitationem tempora, sint enim a sed eligendi doloribus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, expedita inventore a molestiae voluptas non iste rem. Quae soluta explicabo hic consequatur, possimus ullam. Consequuntur iure aperiam natus mollitia maiores!</p>
+					<p>Привет! Меня зовут Артём, и это моя супруга Ирина. Мы молодая семья, которая вот уже как 5й год развивает детское творческое направление с огромной любовью.</p>
+					<p>У нас сложился уже большой опыт ведения этого бизнеса. Начинали мы 4 года назад в замечательном городе Новосибирске. Открыли островок детской творческой песочницы в одном из крупных торговых центров города. Дальше активно проработали детские сады и школы города, выезжали на мероприятия по разукрашиванию картин с детьми от 3х лет, в школах от 7ми лет.</p>
+					<p>После чего нам стали интересны городские парки, мы заключили с самыми проходимыми парками города договоры и установили стационарные точки. В летнее время гости парка с огромным удовольствием посещают нашу песочницу и получают море эмоций.</p>
+					<p>После этого нашу песочницу стали приглашать на крупные массовые мероприятия (день города, новогодние детские ёлки, закрытые вечеринки, частные мероприятия, корпоративы и тд). Бизнес стал развиваться.<p>
+					<p>На этом мы не остановились! :) Нами было принято решение переехать в Москву и развивать нашу песочницу в столице. И вот уже как год мы успешно развиваем ее здесь, в Москве. </p>
+					<p>Спустя 5 лет, мы поняли, что «Песочно» это наше детище! И что мы вкладываемся в него со всей душой. Поэтому приняли решение вывести на рынок предложение по полностью упакованной франшизе. Мы готовы передать весь свой накопленный опыт людям, которые также как и мы готовы сделать свой бизнес нечто большим, чем просто бизнес!</p>
 						<button class="send">Отправить заявку</button>
 					</div>
 				</div>
@@ -209,12 +220,12 @@
 		</section>
 		<section class="open">
 			<div class="container">
-				<h2>Открывайте свой бизнес и <br/> получите прибыль</h2>
+				<h2>Открывайте свой бизнес и <br/> получайте прибыль</h2>
 				<div class="menu">
 					<ul>
 						<li>
 							<p>1 этап</p>
-							<p>Бизнес план и <br/> знакомство</p>
+							<p>«Знакомство с бизнесом»</p>
 						</li>
 						<li>
 							<p>2 этап</p>
@@ -239,8 +250,8 @@
 						<div class="wrap_item">
 							<div class="item">
 								<div class="left first">
-									<h4>Бизнес план и знакомство</h4>
-									<p>Отправляете нам заявку и мы высылаем вам презентацию и подробную финансовую модель бизнеса для ознакомления. Мы связываемся с вами и консультируем по всем деталям проекта, отвечаем на все возникшие вопросы.</p>
+									<h4>«Знакомство с бизнесом»</h4>
+									<p>Оставьте нам заявку и наш специалист свяжется с вами, проконсультирует и ответит на все ваши вопросы.</p>
 								</div>
 								<div class="right">
 									<img src="./img/open1.png" alt="">
@@ -309,25 +320,36 @@
 							<h4>Стоимость франшизы:</h4>
 						</div>
 						<div class="right">
-							<p><span><s>200 000 ₽</s><em>180 000 ₽</em></span><span>цена франшизы при покупке до 31.05</span></p>
+							<p><span><s>200 000 ₽</s><em>184 000 ₽</em></span><span>цена франшизы при покупке до 31.09.2019</span></p>
 						</div>
 					</div>
 					<div class="item">
 						<div class="left">
-							<h4>Прибыль:</h4>
+							<h4>Выручка:</h4>
 						</div>
 						<div class="right">
-							<p>Стоимость посещения музея составляет от 120 ₽* При выезде музея в школу его за день посещают около 150 чел. (5 классов по 30 чел.). Оборот в месяц: около 396 000 ₽* (за 22 рабочих дня).</p>
+							<p>Расчет на 1000 реализованных трафаретов/мес. 
+Средняя стоимость трафарета - 213₽. Выручка: 213 000₽.</p>
 						</div>
 					</div>
 					<div class="item">
 						<div class="left">
 							<h4>
-								Ежемесячные затраты:
+								Ежемесячные расходы:
 							</h4>
 						</div>
 						<div class="right">
-							<p>Зарплата (водитель-грузчик и консультант-ведущий) 40 000 ₽ + печатная рекламная продукция 5 000 ₽ + транспортные расходы 10 000 ₽ + прочие расходы 10 000 ₽ + роялти 11 880 ₽ (3% от оборота) + налоги 23 760 ₽ = 100 640 ₽*</p>
+							<p>55% от выручки (аренда (20%) + зарплата (18%) + себестоимость(12%) + курьерские услуги (5%)) = 117150₽*</p>
+						</div>
+					</div>
+					<div class="item">
+						<div class="left">
+							<h4>
+								Прочие расходы:
+							</h4>
+						</div>
+						<div class="right">
+							<p>CRM + расчетный счет + печатная продукция + прочие расходы = 10 000₽ + роялти: 3000₽ + налоги: 12780₽ </p>
 						</div>
 					</div>
 					<div class="item">
@@ -350,24 +372,26 @@
 				<h2>У вас отсались вопросы?</h2>
 				<div class="wrap_items">
 					<div class="item">
-						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+						<h3>Я никогда не занимался бизнесом. Cмогу ли быстро во всем разобраться?</h3>
+						<p>Мы подготовили для вас поэтапно расписанные инструкции, с учетом всевозможных нюансов (от вопросов как зарегестрировать юридическое лицо - до того как правильно вести финансовый учет). Плюс на этапе запуска мы максимально помогаем, пока вы во всем не разберетесь.</p>
 					</div>
 					<div class="item">
-						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+						<h3>Где я буду брать клиентов?</h3>
+						<p>Мы работаем по 7 направлениям реализации наших товаров и услуг. В каждом направлении у нас есть готовые, проверенные решения по привлечению клиентов, которые мы вам передадим и вы сможете их использовать.</p>
 					</div>
 					<div class="item">
-						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+						<h3>Есть ли у вас конкуренты?</h3>
+						<p>Безусловно, конкуренты у нас есть. Но если брать прямых конкурентов, кто занимается идентичным бизнесом - их немного и не во всех городах они есть. Если брать конкурентов в сфере развлечений для детей - их очень много. Несмотря на это, у нас есть ряд преимуществ, которые позволяют нам расти и развиваться.
+И не забывайте, конкуренты делают нас сильнее!</p>
 					</div>
 					<div class="item">
-						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+						<h3>Почему вы сами не открываете филиалы в других городах, а продаете франшизу?</h3>
+						<p>Мы отталкиваемся от наших целей и задач. Наша основная цель - крупная, функциональная сеть из 50 городов к концу 2020 года. Молодые заинтересованые предприниматели, на наш взгляд, справятся с развитием намного эффективнее, чем сотрудник по найму.</p>
 					</div>
 					<div class="item">
-						<h3>Я никогда не занимался бизнесом, смогу ли быстро во всем разобраться?</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem excepturi praesentium, deserunt eos esse tempora repudiandae commodi, quas dolores et soluta ipsa placeat dolorem odio molestias id dolore eveniet odit!</p>
+						<h3>Вы гарантируете, что бизнес прибыльный?</h3>
+						<p>Мы гарантируем, что НАШ бизнес прибыльный, мы начинали в Новосибирске - окупили вложения через 3 месяца. За 3,5 года работы мы ни разу не закрыли год в минус. За 1,5 года работы в Москве мы увеличили выручку в 4 раза!
+Все зависит от вас, если будете правильно использовать все инструменты, которые мы вам дадим, у вас все получится, а мы в свою очередь будем вам помогать.</p>
 					</div>
 				</div>
 				<button class="send">Отправить заявку</button>
